--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,10 +1,18 @@
 #chatArea {
     background-color: #eeeeee;
-    height: 85vh
+    height: 85vh;
 }
 
 #msgArea {
     background-color: #ffffff;
-    min-height: 15vh;
+    height: 15vh;
+}
+
+.msg:nth-child(even) {
+    background-color: #aaa;
+}
+
+.msg:nth-child(odd) {
+    background-color: #ddd;
 }
 
