--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,12 +1,13 @@
 #chatArea {
     background-color: #eeeeee;
-    height: 85vh;
+    height: 90vh;
 }
 
 #msgArea {
     background-color: #ffffff;
-    height: 15vh;
+    height: 10vh;
 }
+
 
 .msg:nth-child(even) {
     background-color: #aaa;
@@ -16,3 +17,12 @@
     background-color: #ddd;
 }
 
+#sendButton {
+    width: 100%;
+    min-height: 100%;
+}
+
+.form-control {
+    width 100%;
+    height: 100%;
+}
